--- a/ARXIV_2025.ipynb
+++ b/ARXIV_2025.ipynb
@@ -284,7 +284,7 @@
    "metadata": {},
    "source": [
     "### Comments\n",
-    "Similar than for the table. Both uppe bounds based on couting edit scripts are very close, and much better than the PSC conjectured upper-bound."
+    "Similar than for the table. Both upper-bounds based on couting edit scripts (`Myers rec.` and `ARXIV`) are very close, and much better than the `PSC` upper-bound."
    ]
   },
   {
