--- a/ARXIV_2025.ipynb
+++ b/ARXIV_2025.ipynb
@@ -142,6 +142,17 @@
     "    return (math.pow(2*s-1,d)*math.pow(n,d))/math.factorial(d)"
    ]
   },
+ {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing upper-bounds on the size of the condensed neighborhood\n",
+    "- arxiv.Prop4: upper-bound proved in Proposition 4 of the paper <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>.  "
+    "- PSC21.Conj: simple upper-bound conjectured in <a href=\"https://www.stringology.org/event/2021/p03.html\">Refined Upper Bounds on the Size of the Condensed Neighbourhood of Sequences</a>.  "
+    "- Myers.Rec: bound defined by the recurrences described in <a href=\"https://link.springer.com/chapter/10.1007/978-1-4471-5298-9_1\">What’s Behind Blast [Lemma p.10]</a>.  "
+    "- Myers.Bound: simpler bound inferred from the recurrences in <a href=\"https://link.springer.com/chapter/10.1007/978-1-4471-5298-9_1\">What’s Behind Blast [Eq 1.5, p.11]</a>.  "
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 24,
