--- a/ARXIV_2025.ipynb
+++ b/ARXIV_2025.ipynb
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comments\n",
+    "## Comments\n",
     "\n",
     "The novel upper bound proved in *\"On the size of the neighborhoods of a word\"* and Myers recurrences are very close, then the bound conjectured in *\"Refined upper bounds on the size of the condensed neighbourhood of sequences\"*, that is an order of magnitude larger however, and finally, several order of magnitude larger, the analytic upper-bound of Myers."
    ]
