--- a/ARXIV_2025.ipynb
+++ b/ARXIV_2025.ipynb
@@ -216,7 +216,7 @@
     "\n",
     "The novel upper bound proved in *\"On the size of the neighborhoods of a word\"* and Myers recurrences are very close, then the bound conjectured in *\"Refined upper bounds on the size of the condensed neighbourhood of sequences\"*, that is an order of magnitude larger however, and finally, several order of magnitude larger, the analytic upper-bound of Myers.",
     "\n",
-    "arxiv.Prop4: upper-bound proved in Proposition 4 of the paper <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>.\n"
+    "\n - arxiv.Prop4: upper-bound proved in Proposition 4 of the paper <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>.\n"
    ]
   },
   {
