--- a/ARXIV_2025.ipynb
+++ b/ARXIV_2025.ipynb
@@ -216,7 +216,10 @@
     "\n",
     "The novel upper bound proved in *\"On the size of the neighborhoods of a word\"* and Myers recurrences are very close, then the bound conjectured in *\"Refined upper bounds on the size of the condensed neighbourhood of sequences\"*, that is an order of magnitude larger however, and finally, several order of magnitude larger, the analytic upper-bound of Myers.",
     "\n",
-    "\n - arxiv.Prop4: upper-bound proved in Proposition 4 of the paper <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>.\n"
+    "\n - arxiv.Prop4: upper-bound proved in Proposition 4 of the paper <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>.\n",
+    "\n - PSC21.Conj: simple upper-bound conjectured in <a href=\"https://www.stringology.org/event/2021/p03.html\">Refined Upper Bounds on the Size of the Condensed Neighbourhood of Sequences</a>.\n",
+    "\n - Myers.Rec: bound defined by the recurrences described in <a href=\"https://link.springer.com/chapter/10.1007/978-1-4471-5298-9_1\">What’s Behind Blast [Lemma p.10]</a>.\n",
+    "\n - Myers.Bound: simpler bound inferred from the recurrences in <a href=\"https://link.springer.com/chapter/10.1007/978-1-4471-5298-9_1\">What’s Behind Blast [Eq 1.5, p.11]</a>.\"
    ]
   },
   {
