--- a/ARXIV_2025.ipynb
+++ b/ARXIV_2025.ipynb
@@ -6,16 +6,25 @@
    "source": [
     "# On the size of the neighborhoods of a word\n",
     "Cedric Chauve, Louxin Zhang  \n",
-    "August 30, 2025.\n",
+    "September 4, 2025.\n",
     "\n",
     "This notebook contains the code to compute various upper bounds on the size of condensed neighbourhoods of words discussed in the paper  <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;2;31mflexiblas BLAS backend  \"AOCL\" not found. Loading default (IMKL) instead.\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "import matplotlib.pyplot as plt"
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +45,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Considered upper-bounds\n",
+    "\n",
+    "We consider fou upper-bounds for the size of the condensed $d$-neighborhood of a word of length $n$ over an alphabet of size $s$:\n",
+    "- `arxiv_prop4`: upper-bound proved in Proposition 4 of the paper <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>.  \n",
+    " - `PSC21_conj`: simple upper-bound conjectured in <a href=\"https://www.stringology.org/event/2021/p03.html\">Refined Upper Bounds on the Size of the Condensed Neighbourhood of Sequences</a>.  \n",
+    " - `Myers_rec`: bound defined by the recurrences described in <a href=\"https://link.springer.com/chapter/10.1007/978-1-4471-5298-9_1\">What’s Behind Blast [Lemma p.10]</a>.  \n",
+    " - `Myers_bound`: simpler bound inferred from the recurrences in <a href=\"https://link.springer.com/chapter/10.1007/978-1-4471-5298-9_1\">What’s Behind Blast [Eq 1.5, p.11]</a>, that was used to analyse the average time complexity of BLAST."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +67,7 @@
     "# What’s Behind Blast,  C. Chauve et al. (eds.), Models and Algorithms for Genome Evolution, Computational Biology 19, 2013.\n",
     "# DOI: http://dx.doi.org/10.1007/978-1-4471-5298-9_1\n",
     "\n",
-    "def myers_recurrence(s, n, d):\n",
+    "def Myers_rec(s, n, d):\n",
     "    \"\"\"\n",
     "    Myers recurrences for edit scripts of condensed neighborhood\n",
     "    s: alphabet size\n",
@@ -68,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +98,7 @@
     "# What’s Behind Blast,  C. Chauve et al. (eds.), Models and Algorithms for Genome Evolution, Computational Biology 19, 2013.\n",
     "# DOI: http://dx.doi.org/10.1007/978-1-4471-5298-9_1\n",
     "\n",
-    "def myers_bound(s, n, d):\n",
+    "def Myers_bound(s, n, d):\n",
     "    \"\"\"\n",
     "    Upper bound from Myers\n",
     "    s: alphabet size\n",
@@ -93,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +154,7 @@
     "# On the size of the neighborhoods of a word, arXiv:2505.13796, 2025.\n",
     "# https://arxiv.org/abs/2505.13796\n",
     "\n",
-    "def psc_bound(s, n, d):\n",
+    "def PSC21_conj(s, n, d):\n",
     "    \"\"\"\n",
     "    Upper bound from PSC 2021\n",
     "    s: alphabet size\n",
@@ -144,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -153,25 +175,25 @@
      "text": [
       "distance d=         \t1        & 2        & 3        & 4        & 5        & 6        & 7        & 8        & 9       \n",
       "\n",
-      "arxiv.Prop4     n=4    \t10       & 37       & 63      \n",
-      "arxiv.Prop4     n=6    \t16       & 108      & 403      & 935      & 1526    \n",
-      "arxiv.Prop4     n=8    \t22       & 215      & 1235     & 4678     & 12587    & 25943    & 44936   \n",
-      "arxiv.Prop4     n=10   \t28       & 358      & 2775     & 14638    & 56168    & 164969   & 389994   & 784085   & 1414039 \n",
+      "arxiv_prop4     n=4    \t10       & 37       & 63      \n",
+      "arxiv_prop4     n=6    \t16       & 108      & 403      & 935      & 1526    \n",
+      "arxiv_prop4     n=8    \t22       & 215      & 1235     & 4678     & 12587    & 25943    & 44936   \n",
+      "arxiv_prop4     n=10   \t28       & 358      & 2775     & 14638    & 56168    & 164969   & 389994   & 784085   & 1414039 \n",
       "\n",
-      "PSC21.Conj      n=4    \t12       & 72       & 288     \n",
-      "PSC21.Conj      n=6    \t18       & 162      & 972      & 4374     & 15746   \n",
-      "PSC21.Conj      n=8    \t24       & 288      & 2304     & 13824    & 66355    & 265420   & 910014  \n",
-      "PSC21.Conj      n=10   \t30       & 450      & 4500     & 33750    & 202500   & 1012500  & 4339285  & 16272321 & 54241071\n",
+      "PSC21_conj      n=4    \t12       & 72       & 288     \n",
+      "PSC21_conj      n=6    \t18       & 162      & 972      & 4374     & 15746   \n",
+      "PSC21_conj      n=8    \t24       & 288      & 2304     & 13824    & 66355    & 265420   & 910014  \n",
+      "PSC21_conj      n=10   \t30       & 450      & 4500     & 33750    & 202500   & 1012500  & 4339285  & 16272321 & 54241071\n",
       "\n",
-      "Myers.Rec       n=4    \t12       & 48       & 92      \n",
-      "Myers.Rec       n=6    \t18       & 125      & 456      & 1079     & 1990    \n",
-      "Myers.Rec       n=8    \t24       & 238      & 1312     & 4704     & 12580    & 27986    & 53306   \n",
-      "Myers.Rec       n=10   \t30       & 387      & 2876     & 14126    & 50864    & 147366   & 368462   & 817273   & 1573832 \n",
+      "Myers_rec       n=4    \t12       & 48       & 92      \n",
+      "Myers_rec       n=6    \t18       & 125      & 456      & 1079     & 1990    \n",
+      "Myers_rec       n=8    \t24       & 238      & 1312     & 4704     & 12580    & 27986    & 53306   \n",
+      "Myers_rec       n=10   \t30       & 387      & 2876     & 14126    & 50864    & 147366   & 368462   & 817273   & 1573832 \n",
       "\n",
-      "Myers.Bound     n=4    \t74       & 839      & 5899    \n",
-      "Myers.Bound     n=6    \t111      & 1849     & 18627    & 138318   & 831775  \n",
-      "Myers.Bound     n=8    \t148      & 3262     & 43056    & 413174   & 3161641  & 20389574 & 114980844\n",
-      "Myers.Bound     n=10   \t185      & 5079     & 83088    & 981332   & 9164350  & 71464118 & 482667071 & 2898340309 & 15779824349\n"
+      "Myers_bound     n=4    \t74       & 839      & 5899    \n",
+      "Myers_bound     n=6    \t111      & 1849     & 18627    & 138318   & 831775  \n",
+      "Myers_bound     n=8    \t148      & 3262     & 43056    & 413174   & 3161641  & 20389574 & 114980844\n",
+      "Myers_bound     n=10   \t185      & 5079     & 83088    & 981332   & 9164350  & 71464118 & 482667071 & 2898340309 & 15779824349\n"
      ]
     }
    ],
@@ -193,38 +215,33 @@
     "print(f\"{'distance d='.ljust(20)}\\t{distances}\\n\")\n",
     "# Novel upper bound\n",
     "for n in [4,6,8,10]:\n",
-    "    count(2, n, \"arxiv.Prop4\", arxiv_prop4)\n",
+    "    count(2, n, \"arxiv_prop4\", arxiv_prop4)\n",
     "print()\n",
     "# Proved conjecture\n",
     "for n in [4,6,8,10]:\n",
-    "    count(2, n, \"PSC21.Conj\", psc_bound)\n",
+    "    count(2, n, \"PSC21_conj\", PSC21_conj)\n",
     "print()\n",
     "# Myers recurrences\n",
     "for n in [4,6,8,10]:\n",
-    "    count(2, n, \"Myers.Rec\", myers_recurrence)\n",
+    "    count(2, n, \"Myers_rec\", Myers_rec)\n",
     "print()\n",
     "# Myers upper bound\n",
     "for n in [4,6,8,10]:\n",
-    "    count(2, n, \"Myers.Bound\", myers_bound)"
+    "    count(2, n, \"Myers_bound\", Myers_bound)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comments\n",
+    "**Comments.**  \n",
     "\n",
-    "The novel upper bound proved in *\"On the size of the neighborhoods of a word\"* and Myers recurrences are very close, then the bound conjectured in *\"Refined upper bounds on the size of the condensed neighbourhood of sequences\"*, that is an order of magnitude larger however, and finally, several order of magnitude larger, the analytic upper-bound of Myers.",
-    "\n",
-    "\n - arxiv.Prop4: upper-bound proved in Proposition 4 of the paper <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>.\n",
-    "\n - PSC21.Conj: simple upper-bound conjectured in <a href=\"https://www.stringology.org/event/2021/p03.html\">Refined Upper Bounds on the Size of the Condensed Neighbourhood of Sequences</a>.\n",
-    "\n - Myers.Rec: bound defined by the recurrences described in <a href=\"https://link.springer.com/chapter/10.1007/978-1-4471-5298-9_1\">What’s Behind Blast [Lemma p.10]</a>.\n",
-    "\n - Myers.Bound: simpler bound inferred from the recurrences in <a href=\"https://link.springer.com/chapter/10.1007/978-1-4471-5298-9_1\">What’s Behind Blast [Eq 1.5, p.11]</a>.\n"
+    "The novel upper bound `arxiv_prop4` proved in *\"On the size of the neighborhoods of a word\"* and Myers recurrences `Myers_rec` are very close, then the bound `PSC21_conj` conjectured in *\"Refined upper bounds on the size of the condensed neighbourhood of sequences\"*, that is an order of magnitude larger however, and finally, several order of magnitude larger, the analytic upper-bound of Myers, `Myers_bound`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -253,10 +270,10 @@
     "\n",
     "for d in D_RANGE:\n",
     "    for n in range(d+1,N+1):\n",
-    "        MYERS_REC[d].append(myers_recurrence(s,n,d))\n",
-    "        MYERS_BOUND[d].append(myers_bound(s,n,d))\n",
+    "        MYERS_REC[d].append(Myers_rec(s,n,d))\n",
+    "        MYERS_BOUND[d].append(Myers_bound(s,n,d))\n",
     "        ARXIV[d].append(arxiv_prop4(s,n,d))\n",
-    "        PSC[d].append(psc_bound(s,n,d))\n",
+    "        PSC[d].append(PSC21_conj(s,n,d))\n",
     "        \n",
     "fig, axes = plt.subplots(nrows=len(D_RANGE), ncols=3, figsize=(20, 20))\n",
     "for d in D_RANGE:\n",
@@ -289,7 +306,7 @@
    "metadata": {},
    "source": [
     "### Comments\n",
-    "Similar than for the table. Both upper-bounds based on couting edit scripts (`Myers rec.` and `ARXIV`) are very close, and much better than the `PSC` upper-bound."
+    "Similar than for the table. Both upper-bounds based on couting edit scripts (`Myers_rec.` and `arxiv_pop4`, respectively `Myers rec.` and `ARXIV` in the figures) are very close, and much better than the `PSC21_conj` (`PSC` in the figures) upper-bound."
    ]
   },
   {
