--- a/TCBB_2025.ipynb
+++ b/TCBB_2025.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# On the size of the neighborhoods of a word\n",
     "Cedric Chauve, Louxin Zhang  \n",
-    "September 4, 2025.\n",
+    "October 6, 2025.\n",
     "\n",
-    "This notebook contains the code to compute various upper bounds on the size of condensed neighbourhoods of words discussed in the paper  <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>."
+    "This notebook contains the code to compute various upper bounds on the size of condensed neighbourhoods of words discussed in the paper  <a href=\"https://arxiv.org/abs/2505.13796\">On the size of the neighborhoods of a word</a>, accepted for publication in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10723156>IEEE Transactions on Computational Biology and Bioinformatics</a>."
    ]
   },
   {
